# mozjpeg-rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs
src/: colorspace.rs  component.rs  compress.rs  decompress.rs  density.rs  errormgr.rs  lib.rs  marker.rs  qtable.rs  readsrc.rs  vec.rs  writedst.rs
tests/: decode.rs  test.rs  tests.rs
