[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["multimedia::images"]
description = "Higher-level wrapper for Mozilla's JPEG library"
documentation = "https://docs.rs/mozjpeg"
homepage = "https://lib.rs/mozjpeg"
include = ["/README.md", "/Cargo.toml", "/src/*.rs", "LICENSE"]
keywords = ["jpeg", "libjpeg", "image", "encoder", "decoder"]
license = "IJG"
name = "mozjpeg"
readme = "README.md"
repository = "https://github.com/ImageOptim/mozjpeg-rust"
version = "0.10.13"
edition = "2021"
rust-version = "1.71"

[dependencies]
libc = "0.2.155"
mozjpeg-sys = { version = "2.2.3", default-features = false, features = ["unwinding"] }
rgb = { version = "0.8.50", default-features = false, features = ["bytemuck"] }
arrayvec = "0.7.4"
bytemuck = { version = "1.20", default-features = false, features = ["min_const_generics", "align_offset"] }

[features]
default = ["mozjpeg-sys/default"]
parallel = ["mozjpeg-sys/parallel"]
nasm_simd = ["mozjpeg-sys/nasm_simd"]
with_simd = ["mozjpeg-sys/with_simd"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
